# FlagManager

./: .gitignore  README.md
FlagManager/: App.vue  main.js  manifest.json  pages.json  uni.scss
FlagManager/common/mock/: flag-data.js
FlagManager/common/services/: ai.js  auth.js  reminder.js
FlagManager/docs/: FlagManager-低保真原型.md  FlagManager-前端设计文档.md  FlagManager-需求文档.md  plan.md
FlagManager/store/: flag.js  index.js  persist.js
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: auth.py  checkins.py  flags.py  router.py  stages.py  stats.py
backend/app/application/: auth_service.py  checkin_service.py  flag_service.py  stage_service.py  stats_service.py
backend/app/core/: config.py  errors.py  response.py  security.py
backend/app/domain/checkins/: validation.py
backend/app/domain/flags/: enums.py  validation.py
backend/app/domain/stages/: enums.py  validation.py
backend/app/domain/stats/: calculator.py
backend/app/infrastructure/cache/: redis_client.py
backend/app/infrastructure/db/: base.py  models.py  session.py
backend/app/infrastructure/repositories/: checkin_repository.py  flag_repository.py  mappers.py  stage_repository.py  user_repository.py
backend/app/infrastructure/wechat/: gateway.py
backend/app/schemas/: common.py
backend/docs/: plan.md
backend/tests/: conftest.py  test_api_integration.py  test_domain_stats.py
(+22 files in other folders)
